--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build": "node --max_old_space_size=150000 ./node_modules/@angular/cli/bin/ng build --base-href ."
   },
   "private": true,
   "dependencies": {
