--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4203
+          },
           "configurations": {
             "production": {
               "browserTarget": "SampleAngularProject:build:production"
